--- a/notebooks/integrations/cohere/inference-cohere.ipynb
+++ b/notebooks/integrations/cohere/inference-cohere.ipynb
@@ -26,7 +26,7 @@
     "For this example, you will need:\n",
     "\n",
     "- An Elastic deployment with minimum **4GB machine learning node**\n",
-    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
+    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "\n",
     "- Elasticsearch 8.13 or above.\n",
     "   \n",
@@ -43,7 +43,7 @@
    "source": [
     "# Create Elastic Cloud deployment\n",
     "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
+    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
     "\n",
     "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
     "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
