--- a/notebooks/integrations/llama3/rag-elastic-llama3-elser.ipynb
+++ b/notebooks/integrations/llama3/rag-elastic-llama3-elser.ipynb
@@ -22,14 +22,14 @@
     "For this example, you will need:\n",
     "\n",
     "- An Elastic deployment\n",
-    "  - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
+    "  - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "  - For LLM we will be using [Ollama](https://ollama.com/) and [Llama3](https://ollama.com/library/llama3) configured locally.  \n",
     "\n",
     "### Use Elastic Cloud\n",
     "\n",
     "If you don't have an Elastic Cloud deployment, follow these steps to create one.\n",
     "\n",
-    "1. Go to [Elastic cloud Registration](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) and sign up for a free trial\n",
+    "1. Go to [Elastic cloud Registration](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) and sign up for a free trial\n",
     "2. Select **Create Deployment** and follow the instructions"
    ]
   },
