--- a/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
+++ b/supporting-blog-content/evaluating-search-relevance-part-1/retrieve-and-rerank.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "## Create Elastic Cloud deployment\n",
     "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
+    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
     "Once logged in to your Elastic Cloud account, go to the [Create deployment](https://cloud.elastic.co/deployments/create) page and select **Create deployment**. Leave all settings with their default values.\n",
     "\n",
     "\n",
@@ -775,20 +775,25 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "---",
-   "id": "1eae7142374e2f7a"
+   "id": "1eae7142374e2f7a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Confidence intervals",
-   "id": "392ab084d5bc024"
+   "id": "392ab084d5bc024",
+   "metadata": {},
+   "source": [
+    "### Confidence intervals"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "6fb391b00a7efd58",
+   "metadata": {},
    "source": [
     "In this section we will briefly touch upon the concepts of `confidence intervals` and `statistical significance` and we will see how we can use them to determine whether improvements in our pipelines are significant or not.\n",
     "\n",
@@ -798,14 +803,14 @@
     "\n",
     "The code below shows an example of deriving confidence intervals using [bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_\\(statistics\\)) combined with the `percentile` method. It should be noted that this statistic is affected a lot by the number and the variability of queries in the dataset i.e. smaller confidence intervals are expected for larger query sets and vice versa\n",
     " "
-   ],
-   "id": "6fb391b00a7efd58"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "3b5563e681b4236",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def get_ci_with_bootstrapping(scores: list, nr_bootstraps=1000, percentile=95):\n",
     "    \"\"\"\n",
@@ -825,29 +830,31 @@
     "\n",
     "    half_percentile = (100.0 - percentile) / 2.0\n",
     "    return np.percentile(estimates, [half_percentile, 100.0 - half_percentile])"
-   ],
-   "id": "3b5563e681b4236"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "and we can apply it to our results as follows:",
-   "id": "701ed82491660fd6"
+   "id": "701ed82491660fd6",
+   "metadata": {},
+   "source": [
+    "and we can apply it to our results as follows:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "9f2f080185190b58",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ndcg_scores = post_reranking_eval_scores[\"ndcg_cut_10\"]\n",
     "get_ci_with_bootstrapping(ndcg_scores, percentile=95, nr_bootstraps=1000)"
-   ],
-   "id": "9f2f080185190b58"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "be4d62dfde0c588b",
+   "metadata": {},
    "source": [
     "The way to interpret this would be to say that we are 95% confident that the `nDCG@10` score in the ideal scenario lies within that interval\n",
     "\n",
@@ -858,14 +865,13 @@
     "* Check whether there is an overlap between the two intervals. \n",
     "\n",
     "In the last step, if there is **no** overlap we can say that the observed difference in performance between the two pipelines is **statistically significant**. "
-   ],
-   "id": "be4d62dfde0c588b"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "4f8bf706821ab252"
+   "id": "4f8bf706821ab252",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
