--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
@@ -2,6 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "r8OKk3QOGBXl",
+   "metadata": {
+    "id": "r8OKk3QOGBXl"
+   },
    "source": [
     "# **Lexical and Semantic Search with Elasticsearch**\n",
     "\n",
@@ -20,26 +24,22 @@
     "- Elastic 8.8 deployment or later, with 8GB memory machine learning node\n",
     "- The Elastic Learned Sparse EncodeR model that comes pre-loaded into Elastic installed and started on your deployment\n",
     "\n",
-    "We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html), a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) is available."
-   ],
-   "metadata": {
-    "id": "r8OKk3QOGBXl"
-   },
-   "id": "r8OKk3QOGBXl"
+    "We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html), a [free trial](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) is available."
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "hmMWo2e-IkTB",
+   "metadata": {
+    "id": "hmMWo2e-IkTB"
+   },
    "source": [
     "## Setup Elasticsearch environment:\n",
     "\n",
     "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
     "\n",
     "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n"
-   ],
-   "metadata": {
-    "id": "hmMWo2e-IkTB"
-   },
-   "id": "hmMWo2e-IkTB"
+   ]
   },
   {
    "cell_type": "code",
@@ -91,6 +91,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea1VkDBXJIQR",
+   "metadata": {
+    "id": "ea1VkDBXJIQR"
+   },
    "source": [
     "Now we can instantiate the Python Elasticsearch client.\n",
     "\n",
@@ -99,11 +103,7 @@
     "🔐 NOTE: `getpass` enables us to securely prompt the user for credentials without echoing them to the terminal, or storing it in memory.\n",
     "\n",
     "Then we create a `client` object that instantiates an instance of the `Elasticsearch` class."
-   ],
-   "metadata": {
-    "id": "ea1VkDBXJIQR"
-   },
-   "id": "ea1VkDBXJIQR"
+   ]
   },
   {
    "cell_type": "code",
@@ -128,15 +128,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "BH-N6epTJarM",
+   "metadata": {
+    "id": "BH-N6epTJarM"
+   },
    "source": [
     "## Setup emebdding model\n",
     "\n",
     "Next we upload the all-mpnet-base-v2 embedding model into Elasticsearch and create an ingest pipeline with inference processors for text embedding and text expansion, using the description field for both. This field contains the description of each product."
-   ],
-   "metadata": {
-    "id": "BH-N6epTJarM"
-   },
-   "id": "BH-N6epTJarM"
+   ]
   },
   {
    "cell_type": "code",
@@ -212,17 +212,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "QUQ1nCaiKIQr",
+   "metadata": {
+    "id": "QUQ1nCaiKIQr"
+   },
    "source": [
     "## Index documents\n",
     "\n",
     "Then, we create a source index to load `products-ecommerce.json`, this will be the `ecommerce` index and a destination index to extract the documents from the source and index these documents into the destination `ecommerce-search`.\n",
     "\n",
     "For the `ecommerce-search` index we add a field to support dense vector storage and search `description_vector.predicted_value`, this is the target field for inference results. The field type in this case is `dense_vector`, the `all-mpnet-base-v2` model has embedding_size of 768, so dims is set to 768. We also add a `rank_features` field type to support the text expansion output."
-   ],
-   "metadata": {
-    "id": "QUQ1nCaiKIQr"
-   },
-   "id": "QUQ1nCaiKIQr"
+   ]
   },
   {
    "cell_type": "code",
@@ -304,15 +304,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "Vo-LKu8TOT5j",
+   "metadata": {
+    "id": "Vo-LKu8TOT5j"
+   },
    "source": [
     "## Load documents\n",
     "\n",
     "Then we load `products-ecommerce.json` into the `ecommerce` index."
-   ],
-   "metadata": {
-    "id": "Vo-LKu8TOT5j"
-   },
-   "id": "Vo-LKu8TOT5j"
+   ]
   },
   {
    "cell_type": "code",
@@ -352,17 +352,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dShN9W4Opl8",
+   "metadata": {
+    "id": "3dShN9W4Opl8"
+   },
    "source": [
     "## Reindex\n",
     "\n",
     "Now we can reindex data from the `source` index `ecommerce` to the `dest` index `ecommerce-search` with the ingest pipeline `ecommerce-pipeline` we created.\n",
     "\n",
     "After this step our `dest` index will have the fields we need to perform Semantic Search."
-   ],
-   "metadata": {
-    "id": "3dShN9W4Opl8"
-   },
-   "id": "3dShN9W4Opl8"
+   ]
   },
   {
    "cell_type": "code",
@@ -384,13 +384,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Text Analysis with Standard Analyzer"
-   ],
+   "id": "-qUXNuOvPDsI",
    "metadata": {
     "id": "-qUXNuOvPDsI"
    },
-   "id": "-qUXNuOvPDsI"
+   "source": [
+    "## Text Analysis with Standard Analyzer"
+   ]
   },
   {
    "cell_type": "code",
@@ -421,13 +421,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Text Analysis with Stop Analyzer"
-   ],
+   "id": "12u70NLmPyNV",
    "metadata": {
     "id": "12u70NLmPyNV"
    },
-   "id": "12u70NLmPyNV"
+   "source": [
+    "## Text Analysis with Stop Analyzer"
+   ]
   },
   {
    "cell_type": "code",
@@ -458,13 +458,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Lexical Search"
-   ],
+   "id": "8G8MKcUvP0zs",
    "metadata": {
     "id": "8G8MKcUvP0zs"
    },
-   "id": "8G8MKcUvP0zs"
+   "source": [
+    "## Lexical Search"
+   ]
   },
   {
    "cell_type": "code",
@@ -506,13 +506,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Semantic Search with Dense Vector"
-   ],
+   "id": "xiywcf_-P39a",
    "metadata": {
     "id": "xiywcf_-P39a"
    },
-   "id": "xiywcf_-P39a"
+   "source": [
+    "## Semantic Search with Dense Vector"
+   ]
   },
   {
    "cell_type": "code",
@@ -554,13 +554,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Semantic Search with Sparse Vector"
-   ],
+   "id": "QlWFdngRQFbv",
    "metadata": {
     "id": "QlWFdngRQFbv"
    },
-   "id": "QlWFdngRQFbv"
+   "source": [
+    "## Semantic Search with Sparse Vector"
+   ]
   },
   {
    "cell_type": "code",
@@ -599,13 +599,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Hybrid Search - BM25+KNN linear combination"
-   ],
+   "id": "kz9deDBYQJxr",
    "metadata": {
     "id": "kz9deDBYQJxr"
    },
-   "id": "kz9deDBYQJxr"
+   "source": [
+    "## Hybrid Search - BM25+KNN linear combination"
+   ]
   },
   {
    "cell_type": "code",
@@ -662,13 +662,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Hybrid Search - BM25+KNN RRF"
-   ],
+   "id": "cybkWjmpQV8g",
    "metadata": {
     "id": "cybkWjmpQV8g"
    },
-   "id": "cybkWjmpQV8g"
+   "source": [
+    "## Hybrid Search - BM25+KNN RRF"
+   ]
   },
   {
    "cell_type": "code",
@@ -730,13 +730,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Hybrid Search - BM25+ELSER linear combination"
-   ],
+   "id": "LyKI2Z-XQbI6",
    "metadata": {
     "id": "LyKI2Z-XQbI6"
    },
-   "id": "LyKI2Z-XQbI6"
+   "source": [
+    "## Hybrid Search - BM25+ELSER linear combination"
+   ]
   },
   {
    "cell_type": "code",
@@ -790,6 +790,9 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -806,9 +809,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
-  },
-  "colab": {
-   "provenance": []
   }
  },
  "nbformat": 4,
