update esql notebook

--- a/notebooks/esql/esql-getting-started.ipynb
+++ b/notebooks/esql/esql-getting-started.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "## Create Elastic Cloud deployment\n",
         "\n",
-        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
+        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?onboarding_token=search&utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
         "\n",
         "Once logged in to your Elastic Cloud account, go to the [Create deployment](https://cloud.elastic.co/deployments/create) page and select **Create deployment**. Leave all settings with their default values."
       ]
@@ -75,8 +75,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting elasticsearch\n",
             "  Downloading elasticsearch-8.14.0-py3-none-any.whl (480 kB)\n",
@@ -214,8 +214,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Successfully indexed 7 documents.\n"
           ]
@@ -356,8 +356,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message              \n",
             "--------------------------------------------------------------------------------\n",
@@ -414,8 +414,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message              \n",
             "--------------------------------------------------------------------------------\n",
@@ -458,8 +458,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message              \n",
             "--------------------------------------------------------------------------------\n",
@@ -506,8 +506,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip   | event_duration | message         \n",
             "--------------------------------------------------------------------------\n",
@@ -549,8 +549,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message              \n",
             "--------------------------------------------------------------------------------\n",
@@ -609,8 +609,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip   | event_duration | message              \n",
             "-------------------------------------------------------------------------------\n",
@@ -663,8 +663,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message               | duration_ms\n",
             "----------------------------------------------------------------------------------------------\n",
@@ -709,8 +709,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message               | duration_ms\n",
             "----------------------------------------------------------------------------------------------\n",
@@ -759,8 +759,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "median_duration\n",
             "---------------\n",
@@ -799,8 +799,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "median_duration | max_duration\n",
             "------------------------------\n",
@@ -839,8 +839,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "median_duration | client_ip   \n",
             "------------------------------\n",
@@ -886,8 +886,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message               | event_duration/1000000.0\n",
             "-----------------------------------------------------------------------------------------------------------\n",
@@ -932,8 +932,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "MEDIAN(`event_duration/1000000.0`)\n",
             "----------------------------------\n",
@@ -978,8 +978,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "COUNT(*) | bucket                  \n",
             "-----------------------------------\n",
@@ -1019,8 +1019,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "median_duration | bucket                  \n",
             "------------------------------------------\n",
@@ -1068,14 +1068,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "ObjectApiResponse({'status': {'phase': 'COMPLETE'}})"
             ]
           },
+          "execution_count": 45,
           "metadata": {},
-          "execution_count": 45
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1143,8 +1143,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | event_duration | client_ip    | env        \n",
             "----------------------------------------------------------------------\n",
@@ -1190,8 +1190,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "median_duration | env        \n",
             "-----------------------------\n",
@@ -1255,8 +1255,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "@timestamp               | client_ip    | event_duration | message               | server_ip\n",
             "--------------------------------------------------------------------------------------------\n",
@@ -1302,8 +1302,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "COUNT(*) | server_ip\n",
             "--------------------\n",
@@ -1352,12 +1352,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.12.3 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.11.5"
+      "version": "3.12.3"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+      }
     }
   },
   "nbformat": 4,
