Updated to use Elastic Cloud Host rather than cloud_id

--- a/supporting-blog-content/advanced-rag-techniques/main.ipynb
+++ b/supporting-blog-content/advanced-rag-techniques/main.ipynb
@@ -94,8 +94,8 @@
       "  warnings.warn(\n",
       "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/transformers/utils/generic.py:309: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  _torch_pytree._register_pytree_node(\n",
-      "INFO:elastic_helpers:Connection created for cloud_id: Training:YXNpYS1zb3V0aGVhc3QxLmdjcC5lbGFzdGljLWNsb3VkLmNvbTo0NDMkOTVmMWQ4MTZiNWEzNGM3NTljNjEwMWIyODU4ZGRmZGEkZmE0NzUyN2UwN2NkNGUwYThiOGFkMGViZDc2ZDE4NGY=\n",
-      "INFO:elastic_helpers:Connection created for cloud_id: Training:YXNpYS1zb3V0aGVhc3QxLmdjcC5lbGFzdGljLWNsb3VkLmNvbTo0NDMkOTVmMWQ4MTZiNWEzNGM3NTljNjEwMWIyODU4ZGRmZGEkZmE0NzUyN2UwN2NkNGUwYThiOGFkMGViZDc2ZDE4NGY=\n",
+      "INFO:elastic_helpers:Connection created for hosts: ['https://training-9b4cc2.es.asia-southeast1.gcp.elastic-cloud.com:9243/']\n",
+      "INFO:elastic_helpers:Connection created for hosts: ['https://training-9b4cc2.es.asia-southeast1.gcp.elastic-cloud.com:9243/']\n",
       "INFO:llm:LLMProcessor initialized with model: gpt-4o\n"
      ]
     }
@@ -121,18 +121,42 @@
     "entity_extractor=EntityExtractor()\n",
     "\n",
     "# Initialize Elasticsearch\n",
-    "ELASTIC_CLOUD_ID = os.environ.get('ELASTIC_CLOUD_ID')\n",
+    "ELASTIC_CLOUD_HOST = os.environ.get('ELASTIC_CLOUD_HOST')\n",
     "ELASTIC_USERNAME = os.environ.get('ELASTIC_USERNAME')\n",
     "ELASTIC_PASSWORD = os.environ.get('ELASTIC_PASSWORD')\n",
     "ELASTIC_CLOUD_AUTH = (ELASTIC_USERNAME, ELASTIC_PASSWORD)\n",
-    "es_bulk_indexer = ESBulkIndexer(cloud_id=ELASTIC_CLOUD_ID, credentials=ELASTIC_CLOUD_AUTH)\n",
-    "es_query_maker = ESQueryMaker(cloud_id=ELASTIC_CLOUD_ID, credentials=ELASTIC_CLOUD_AUTH)\n",
+    "es_bulk_indexer = ESBulkIndexer(cloud_id=[ELASTIC_CLOUD_HOST], credentials=ELASTIC_CLOUD_AUTH)\n",
+    "es_query_maker = ESQueryMaker(cloud_id=[ELASTIC_CLOUD_HOST], credentials=ELASTIC_CLOUD_AUTH)\n",
     "\n",
     "# Define Index Name\n",
     "index_name=os.environ.get('ELASTIC_INDEX_NAME')\n",
     "\n",
     "# Initialize LLMs\n",
     "gpt4o = LLMProcessor(model='gpt-4o')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:elastic_transport.transport:HEAD https://training-9b4cc2.es.asia-southeast1.gcp.elastic-cloud.com:9243/ [status:200 duration:0.042s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ping successful: Connected to Elasticsearch!\n"
+     ]
+    }
+   ],
+   "source": [
+    "es_bulk_indexer.ping()"
    ]
   },
   {
@@ -1455,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1540,8 +1564,8 @@
       "INFO:httpx:HTTP Request: POST https://ca-shared.openai.azure.com//openai/deployments/experiment_45kTPM_gpt-4o/chat/completions?api-version=2024-06-01 \"HTTP/1.1 200 OK\"\n",
       "INFO:llm:Request processed successfully\n",
       "INFO:llm:Elastic search query generation completed successfully\n",
-      "INFO:elastic_transport.transport:POST https://95f1d816b5a34c759c6101b2858ddfda.asia-southeast1.gcp.elastic-cloud.com:443/test_index_1/_search [status:200 duration:0.107s]\n",
-      "INFO:elastic_helpers:Hybrid search executed on index: test_index_1 with text query: audits elastic OR audit company OR auditing firm OR compliance review OR third-party audit OR security audit OR Elasticsearch inspection OR cloud service audit OR data security audit\n",
+      "INFO:elastic_transport.transport:POST https://training-9b4cc2.es.asia-southeast1.gcp.elastic-cloud.com:9243/test_index_1/_search [status:200 duration:0.028s]\n",
+      "INFO:elastic_helpers:Hybrid search executed on index: test_index_1 with text query: audit elastic OR auditing Elasticsearch OR Elasticsearch auditor OR audit Elasticsearch company OR Elasticsearch compliance OR Elasticsearch security audit OR Elasticsearch external review\n",
       "INFO:llm:Executing task: RAG answer generation\n",
       "INFO:llm:Processing request with model: gpt-4o\n",
       "INFO:httpx:HTTP Request: POST https://ca-shared.openai.azure.com//openai/deployments/experiment_45kTPM_gpt-4o/chat/completions?api-version=2024-06-01 \"HTTP/1.1 200 OK\"\n",
@@ -1553,9 +1577,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "According to the context, Elastic is audited by PricewaterhouseCoopers (PwC). The relevant section from the text states:\n",
+      "According to the context provided, Elastic's financial statements are audited by PricewaterhouseCoopers. Here is the relevant excerpt:\n",
       "\n",
-      "\"[CLS] opinions on the financial statements and internal control over financial reporting we have audited the accompanying consolidated balance sheets of elastic n. v. [SEP] [CLS] and its subsidiaries ( the 'company' ) as of april 30, 2023 and 2022... [SEP] [CLS] our audit of internal control over financial reporting... [SEP] [CLS] / s / pricewaterhousecoopers'.\n"
+      "> \"[...] **/ s / pricewaterhousecoopers**.\"\n",
+      "\n",
+      "Based on this context, PricewaterhouseCoopers is the firm responsible for auditing Elastic.\n"
      ]
     }
    ],
