formatted with black formatter

--- a/supporting-blog-content/building-multilingual-rag-with-elastic-and-mistral/building_multilingual_rag_with_elastic_and_mistral.ipynb
+++ b/supporting-blog-content/building-multilingual-rag-with-elastic-and-mistral/building_multilingual_rag_with_elastic_and_mistral.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Building RAG with Elastic and [Mistral](https://docs.mistral.ai/getting-started/quickstart/)\n",
         "\n",
-        "This notebook is a hands-on demonstration of how to create a multilingual RAG system. The following steps were extracted from the article [\"Building RAG with Elastic and Mistral\"](https://www.elastic.co/search-labs/blog/building-multilingual-rag-with-elastic-and-mistral)."
+        "This notebook is a hands-on demonstration of how to create a multilingual RAG system. The following steps were extracted from the article [\"Building RAG with Elastic and Mistral\"](https://www.elastic.co/search-labs/blog/building-multilingual-rag-with-elastic-and-mistral).\n"
       ]
     },
     {
@@ -498,12 +498,12 @@
       "outputs": [],
       "source": [
         "# Joining the Elasticsearch retrieve context\n",
-        "elastic_context=[]\n",
+        "elastic_context = []\n",
         "\n",
         "for r in response.body[\"hits\"][\"hits\"]:\n",
         "    elastic_context.append(r[\"_source\"][\"super_body\"][\"text\"])\n",
         "\n",
-        "context_str= '\\n'.join(elastic_context)"
+        "context_str = \"\\n\".join(elastic_context)"
       ]
     },
     {
@@ -655,7 +655,7 @@
       "source": [
         "## Deleting\n",
         "\n",
-        "Finally, we can delete the resources used to prevent them from consuming resources."
+        "Finally, we can delete the resources used to prevent them from consuming resources.\n"
       ]
     },
     {
@@ -692,10 +692,12 @@
       ],
       "source": [
         "# Cleanup - Delete Index\n",
-        "es_client.indices.delete(index='multilingual-mistral', ignore=[400, 404])\n",
+        "es_client.indices.delete(index=\"multilingual-mistral\", ignore=[400, 404])\n",
         "\n",
         "# Cleanup - Delete Embeddings Endpoint\n",
-        "es_client.inference.delete_model(inference_id='multilingual_embeddings', ignore=[400, 404])"
+        "es_client.inference.delete_model(\n",
+        "    inference_id=\"multilingual_embeddings\", ignore=[400, 404]\n",
+        ")"
       ]
     }
   ],
